# spacy-hearst

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
hearst/: builder.py  extractor.py
tests/: test_extractor.py
