[tool.poetry]
name = "spacy-hearst"
version = "0.1.0"
description = ""
authors = ["Hironsan <hiroki.nakayama.py@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.982"
pytest = "^7.1.3"
pyproject-flake8 = "^5.0.4"
taskipy = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503"
filename = "*.py"
exclude = ".git,__pycache__,docs,build,dist"

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
show_error_codes = true

[tool.taskipy.tasks]
isort = "isort . -c"
flake8 = "pflake8 hearst"
black = "black --check ."
mypy = "mypy hearst"
test = "python -m pytest"
download = "python -m spacy download en_core_web_sm"
